--- a/apps/todo-page/project.json
+++ b/apps/todo-page/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "shell",
+  "name": "todo-page",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/shell/src",
+  "sourceRoot": "apps/todo-page/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,16 +10,19 @@
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
-        "outputPath": "dist/apps/shell",
-        "index": "apps/shell/src/index.html",
+        "outputPath": "dist/apps/todo-page",
+        "index": "apps/todo-page/src/index.html",
         "baseHref": "/",
-        "main": "apps/shell/src/main.ts",
-        "tsConfig": "apps/shell/tsconfig.app.json",
-        "assets": ["apps/shell/src/favicon.ico", "apps/shell/src/assets"],
-        "styles": ["apps/shell/src/styles.css"],
+        "main": "apps/todo-page/src/main.ts",
+        "tsConfig": "apps/todo-page/tsconfig.app.json",
+        "assets": [
+          "apps/todo-page/src/favicon.ico",
+          "apps/todo-page/src/assets"
+        ],
+        "styles": ["apps/todo-page/src/styles.css"],
         "scripts": [],
         "isolatedConfig": true,
-        "webpackConfig": "apps/shell/webpack.config.js"
+        "webpackConfig": "apps/todo-page/webpack.config.js"
       },
       "configurations": {
         "development": {
@@ -31,8 +34,8 @@
         "production": {
           "fileReplacements": [
             {
-              "replace": "apps/shell/src/environments/environment.ts",
-              "with": "apps/shell/src/environments/environment.prod.ts"
+              "replace": "apps/todo-page/src/environments/environment.ts",
+              "with": "apps/todo-page/src/environments/environment.prod.ts"
             }
           ],
           "optimization": true,
@@ -41,7 +44,7 @@
           "namedChunks": false,
           "extractLicenses": true,
           "vendorChunk": false,
-          "webpackConfig": "apps/shell/webpack.config.prod.js"
+          "webpackConfig": "apps/todo-page/webpack.config.prod.js"
         }
       }
     },
@@ -49,16 +52,16 @@
       "executor": "@nx/react:module-federation-dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "shell:build",
+        "buildTarget": "todo-page:build",
         "hmr": true,
-        "port": 4200
+        "port": 4202
       },
       "configurations": {
         "development": {
-          "buildTarget": "shell:build:development"
+          "buildTarget": "todo-page:build:development"
         },
         "production": {
-          "buildTarget": "shell:build:production",
+          "buildTarget": "todo-page:build:production",
           "hmr": false
         }
       }
@@ -67,22 +70,22 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/shell/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["apps/todo-page/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "shell:build",
-        "port": 4200
+        "buildTarget": "todo-page:build",
+        "port": 4202
       },
       "configurations": {
         "development": {
-          "buildTarget": "shell:build:development"
+          "buildTarget": "todo-page:build:development"
         },
         "production": {
-          "buildTarget": "shell:build:production"
+          "buildTarget": "todo-page:build:production"
         }
       }
     },
@@ -90,7 +93,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/shell/jest.config.ts",
+        "jestConfig": "apps/todo-page/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
