--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.0",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.2",
+    "tslib": "^2.3.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -18,6 +22,7 @@
     "@nx/js": "16.6.0",
     "@nx/linter": "16.6.0",
     "@nx/react": "16.6.0",
+    "@nx/web": "16.6.0",
     "@nx/webpack": "16.6.0",
     "@nx/workspace": "16.6.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -42,6 +47,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "16.6.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
